--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
             </ul>
         </div>
         <img src="images/logo-itbank.png" alt="Logo del banco" class="logo img-fluid mx-auto d-block" id="foto-logo">
-        <nav class="menu-desplegado">
-            <ul>
-                <li><a href="index.html"> Inicio <i class="fa-solid fa-house"></i></a></li>
-                <li><a href="cuentas.html">Cuentas <i class="fa-solid fa-credit-card"></i></a></li>
-                <li><a href="pagos.html">Pagos <i class="fa-solid fa-receipt"></i></a></li>
-                <li><a href="transferencias.html">Transferencias <i class="fa-solid fa-arrow-right-arrow-left"></i></a></li>
-                <li><a href="conversor.html">Conversor de monedas <i class="fa-solid fa-dollar-sign"></i></a></li>
-            </ul>
-        </nav>
     </header>
     <section class="principal">
-        <h1> Bienvenido/a ITBANK, tu banco de confianza</h1>
-        <article class="login">
+    <nav class="menu-desplegado">
+        <ul>
+            <li><a href="index.html"> Inicio <i class="fa-solid fa-house"></i></a></li>
+            <li><a href="cuentas.html">Cuentas <i class="fa-solid fa-credit-card"></i></a></li>
+            <li><a href="pagos.html">Pagos <i class="fa-solid fa-receipt"></i></a></li>
+            <li><a href="transferencias.html">Transferencias <i class="fa-solid fa-arrow-right-arrow-left"></i></a></li>
+            <li><a href="conversor.html">Conversor de monedas <i class="fa-solid fa-dollar-sign"></i></a></li>
+        </ul>
+    </nav>
+        <div class="login">
+            <h1> Bienvenido/a ITBANK, tu banco de confianza</h1>
             <h3> Para continuar, ingresa tus credenciales</h3>
             <div>
                 <form action="" class="formulario">
@@ -45,7 +45,7 @@
                 </form>
                 <p> Todavía no tienes una cuenta? Puedes <a href="#">crear una nueva cuenta</a></p>
             </div>
-        </article>
+        </div>
     </section>
     <footer>
         <p>Términos de uso</p>
