--- a/conversor.html
+++ b/conversor.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ITBANK-Cuentas</title>
-    <link rel="shortcut icon" href="">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+  <title>ITBANK-Transferencias</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="conversor.js"></script>
 </head>
 <body>
     <header>
@@ -34,18 +35,28 @@
                 <li><a href="conversor.html">Conversor de monedas <i class="fa-solid fa-dollar-sign"></i></a></li>
             </ul>
         </nav>
-        <div class="container mt-3" id="cuentas">
-            <h1 id="cuenta">Mis cuentas</h1>
-            <div class="container pb-5 bg-dark text-white cuenta">
-                <p>Caja de ahorro en $ARS</p>
+        <article>
+            <h1> Conversor de monedas</h1>
+            <p> Indique las monedas y las cantidades para su conversión</p>
+            <div>
+                <select name="moneda1" id="moneda1">
+                    <option value="USD" selected>USD</option>
+                    <option value="EUR">EUR</option>
+                    <option value="BRL">BRL</option>
+                    <option value="ARS">ARS</option>
+                </select>
+                <input type="text" name="monto1" id="monto1" placeholder="1">
             </div>
-            <div class="container pb-5 bg-dark text-white cuenta">
-                <p>Caja de ahorro en $USD</p>
+            <div>
+                <select name="moneda2" id="moneda2">
+                    <option value="USD">USD</option>
+                    <option value="EUR">EUR</option>
+                    <option value="BRL">BRL</option>
+                    <option value="ARS" selected>ARS</option>
+                </select>
+                <input type="text" name="monto2" id="monto2">
             </div>
-            <div class="container pb-5 bg-dark text-white cuenta">
-                <p>Tarjeta de crédito VISA</p>
-            </div>
-        </div>
+        </article>
     </section>
     <footer>
         <p>Términos de uso</p>
