--- a/cuentas.html
+++ b/cuentas.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ITBANK-Cuentas</title>
-    <link rel="shortcut icon" href="">
+    <title>BANCO RÍO</title>
+    <link rel="shortcut icon" href="images/icono.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -20,18 +20,20 @@
                 <li><a href="pagos.html" class="dropdown-item">Pagos <i class="fa-solid fa-receipt"></i></a></li>
                 <li><a href="transferencias.html" class="dropdown-item">Transferencias <i class="fa-solid fa-arrow-right-arrow-left"></i></a></li>
                 <li><a href="conversor.html" class="dropdown-item">Conversor de monedas <i class="fa-solid fa-dollar-sign"></i></a></li>
+                <li><a href="simulador.html" class="dropdown-item">Simulador de préstamo <i class="fa-solid fa-piggy-bank"></i></a></li>
             </ul>
         </div>
         <img src="images/logo-itbank.png" alt="Logo del banco" class="logo img-fluid mx-auto d-block" id="foto-logo">
     </header>
     <section class="principal">
         <nav class="menu-desplegado">
-            <ul>
+            <ul class="lista">
                 <li><a href="index.html"> Inicio <i class="fa-solid fa-house"></i></a></li>
                 <li><a href="cuentas.html">Cuentas <i class="fa-solid fa-credit-card"></i></a></li>
                 <li><a href="pagos.html">Pagos <i class="fa-solid fa-receipt"></i></a></li>
                 <li><a href="transferencias.html">Transferencias <i class="fa-solid fa-arrow-right-arrow-left"></i></a></li>
                 <li><a href="conversor.html">Conversor de monedas <i class="fa-solid fa-dollar-sign"></i></a></li>
+                <li><a href="simulador.html">Simulador de préstamo <i class="fa-solid fa-piggy-bank"></i></a></li>
             </ul>
         </nav>
         <div class="container mt-3" id="cuentas">
