--- a/simulador.html
+++ b/simulador.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script defer src="simulador.js"></script>
+</head>
 </head>
 <body>
     <header>
@@ -19,34 +21,31 @@
                 <li><a href="cuentas.html" class="dropdown-item">Cuentas <i class="fa-solid fa-credit-card"></i></a></li>
                 <li><a href="pagos.html" class="dropdown-item">Pagos <i class="fa-solid fa-receipt"></i></a></li>
                 <li><a href="transferencias.html" class="dropdown-item">Transferencias <i class="fa-solid fa-arrow-right-arrow-left"></i></a></li>
-                <li><a href="conversor.html" class="dropdown-item">Conversor de monedas <i class="fa-solid fa-dollar-sign"></i></a></li>
+                <li><a href="conversor.html" class="dropdown-item">Conversor de monedas <i class="fa-solid fa-piggy-bank"></i></a></li>
                 <li><a href="simulador.html" class="dropdown-item">Simulador de préstamo <i class="fa-solid fa-piggy-bank"></i></a></li>
             </ul>
         </div>
         <img src="images/logo-itbank.png" alt="Logo del banco" class="logo img-fluid mx-auto">
     </header>
     <section class="principal">
-    <nav class="menu-desplegado">
-        <ul class="lista">
-            <li><a href="index.html"> Inicio <i class="fa-solid fa-house"></i></a></li>
-            <li><a href="cuentas.html">Cuentas <i class="fa-solid fa-credit-card"></i></a></li>
-            <li><a href="pagos.html">Pagos <i class="fa-solid fa-receipt"></i></a></li>
-            <li><a href="transferencias.html">Transferencias <i class="fa-solid fa-arrow-right-arrow-left"></i></a></li>
-            <li><a href="conversor.html">Conversor de monedas <i class="fa-solid fa-dollar-sign"></i></a></li>
-            <li><a href="simulador.html">Simulador de préstamo <i class="fa-solid fa-piggy-bank"></i></a></li>
-        </ul>
-    </nav>
-        <div class="login">
-            <h1> Bienvenido/a Banco Río, tu banco de confianza</h1>
-            <h3> Para continuar, ingresa tus credenciales</h3>
-            <div>
-                <form action="" class="formulario">
-                    <label for="usuario">Usuario</label><input type="text" name="usuario" placeholder="Usuario" class="sin-borde">
-                    <label for="password">Contraseña</label><input type="password" name="password" placeholder="Contraseña" class="sin-borde">
-                    <button type="button" name="boton" class="boton">Ingresar</button>
-                </form>
-                <p class="center"> Todavía no tienes una cuenta? Puedes <a href="#">crear una nueva cuenta</a></p>
-            </div>
+        <nav class="menu-desplegado">
+            <ul class="lista">
+                <li><a href="index.html"> Inicio <i class="fa-solid fa-house"></i></a></li>
+                <li><a href="cuentas.html">Cuentas <i class="fa-solid fa-credit-card"></i></a></li>
+                <li><a href="pagos.html">Pagos <i class="fa-solid fa-receipt"></i></a></li>
+                <li><a href="transferencias.html">Transferencias <i class="fa-solid fa-arrow-right-arrow-left"></i></a></li>
+                <li><a href="conversor.html">Conversor de monedas <i class="fa-solid fa-dollar-sign"></i></a></li>
+                <li><a href="simulador.html">Simulador de préstamo <i class="fa-solid fa-piggy-bank"></i></a></li>
+            </ul>
+        </nav>
+        <div class="simulador">
+            <h1>Simulador de préstamos</h1>
+            <label for="capital">Capital</label>
+            <input type="number" class="sin-borde" name="capital" id="capital" placeholder="Ej. 1000">
+            <label for="tiempo">Tiempo</label>
+            <input type="number" class="sin-borde" name="tiempo" id="tiempo" placeholder="Años">
+            <button class="boton" id="calcular">Calcular</button>
+            <div id="resultado"></div>
         </div>
     </section>
     <footer>
